Fix z-indexing issue on right side.

--- a/app/assets/stylesheets/youstars.css.scss
+++ b/app/assets/stylesheets/youstars.css.scss
@@ -1021,7 +1021,7 @@ $ys-profile-tile-large-size:	230px;
 	top: -132px;
 	background: transparent url("/assets/background-black-33.png") repeat 0 0;
 	position: relative;
-	z-index: 15;
+	z-index: 10;
 	@include box-sizing(border-box);
 	@include transition-property(margin);
 	@include transition-duration(0.33s);
